# Asr

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/weechan/asr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp  main3.cpp  native-lib.cpp
app/src/main/cpp/core/c/: android-utils.cpp  model.cpp  readwav.cpp
app/src/main/cpp/core/headers/: android-utils.h  model.h
app/src/main/java/com/weechan/asr/: Adaptee.java  Adapter.kt  Analyze.java  App.java  BottomDialog.kt  MainActivity.java  MainActivity.kt  MyAdapter.java  Record.java  SoundModel.java  SoundModel.kt  TypeNew.kt  TypePre.kt  WaveView.java  i.kt  phm.kt
app/src/main/java/com/weechan/asr/anotation/: i.kt
app/src/main/java/com/weechan/asr/base/: BaseAdapter.kt  BaseViewHolder.kt  MultiEntity.kt  Type.kt
app/src/main/java/com/weechan/asr/data/: Record.java  Sentence.kt  SoundSource.kt  Word.kt  phm.kt
app/src/main/java/com/weechan/asr/nativeUtils/: NativeUtils.java
app/src/main/java/com/weechan/asr/net/: BaseResponse.java  Okhttp.kt  Resp.kt
app/src/main/java/com/weechan/asr/utils/: AlbumPicker.kt  AlbumPickerActivity.kt  AudioRecorder.java  IOUtils.java  MusicPlayer.kt  O.kt  SpanUtils.java
app/src/main/java/com/weechan/asr/utils/album/: AlbumPicker.kt  AlbumPickerActivity.kt
app/src/main/java/com/weechan/asr/utils/other/: IOUtils.java  O.kt
app/src/main/java/com/weechan/asr/utils/permission/: Permission.kt  PermissionActivity.kt  PermissionCompatActivity.kt  (+2 more)
app/src/main/java/com/weechan/asr/widget/: BoLangView.java  TextBoard.java  WaveView.java
app/src/main/res/anim/: rotate.xml
app/src/main/res/drawable/: dott.xml
app/src/main/res/layout/: activity_main.xml  item_audio.xml  item_new.xml  item_pre.xml  item_sound.xml  item_text.xml  popup_audio.xml  word_sheet.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/weechan/asr/: ExampleUnitTest.java
(+1 files in other folders)
